# moodle_scripts

./: pyproject.toml
enroll/: interns.py  readme.md  test_interns.py
