[project]
name = "moodle_scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.3.1",
    "openpyxl==3.1.5",
    "python-dotenv==1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]
